windows/AppKernel/include/appkernel.h

typedef struct AK_SESSION AK_SESSION;
typedef struct AK_DISK AK_DISK;
typedef LONG AK_STATUS;
#define AK_STATUS_SUCCESS ((AK_STATUS)0x00000000L)
#define AK_STATUS_UNSUCCESSFUL ((AK_STATUS)0xC0000001L)
#define AK_STATUS_NO_MORE_ENTRIES ((AK_STATUS)0x8000001AL)
#define AK_STATUS_INVALID_PARAMETER ((AK_STATUS)0xC000000DL)
typedef struct AK_OPEN_PARAMS {
    UINT32 HeartbeatIntervalMs;
    UINT32 InitialEventQueueCapacity;
    AK_LOG_FN LogFn;
    void* LogCtx;
} AK_OPEN_PARAMS;
typedef struct AK_DISK_PARAMS {
    UINT32 TargetId;
    UINT32 SectorSize;
    UINT64 DiskSizeBytes;
    UINT32 QueueDepth;
    UINT32 WriteSlotBytes;
    UINT16 ReadWorkerCount;
    UINT16 WriteWorkerCount;
    UINT32 AckBatchMaxRanges;
} AK_DISK_PARAMS;
typedef struct AK_MEDIA_OPS {
    AK_STATUS(AK_CALL* read_bytes)(
        void* media_ctx,
        const AK_READ_OP* op,
        void* out_buffer,
        UINT32* out_data_length);

    AK_STATUS(AK_CALL* stage_write)(
        void* media_ctx,
        const AK_WRITE_OP* op,
        const void* data_buffer,
        UINT32 data_length);
} AK_MEDIA_OPS;
typedef struct AK_EVENT {
    AK_EVENT_TYPE Type;
    UINT32 TargetId;
    UINT64 DiskRuntimeId;
    UINT64 EventId;
    UINT32 TotalSeq;
    UINT32 Flags;
    AK_STATUS Status;
} AK_EVENT;
typedef struct AK_SESSION_STATE {
    AK_LIFECYCLE_STATE Lifecycle;
    UINT64 SessionId;
    BOOLEAN HeartbeatRunning;
    BOOLEAN TransportReady;
    UINT32 DiskCount;
    UINT32 AppKernelVersionBe;
    UINT32 KmdfVersionBe;
    UINT32 ScsiVersionBe;
    AK_STATUS LastError;
} AK_SESSION_STATE;
typedef struct AK_DISK_STATE {
    AK_LIFECYCLE_STATE Lifecycle;
    UINT32 TargetId;
    UINT64 DiskRuntimeId;
    BOOLEAN ReadWorkersRunning;
    BOOLEAN WriteWorkersRunning;
    BOOLEAN AckFlusherRunning;
    AK_STATUS LastError;
} AK_DISK_STATE;
typedef struct AK_SESSION_STATS {
    UINT64 HeartbeatSent;
    UINT64 CommandFailures;
    UINT64 ProtocolFailures;
    UINT64 EventsQueued;
    UINT64 EventsDropped;
} AK_SESSION_STATS;
AK_API AK_STATUS AK_CALL AkOpen(
    const AK_OPEN_PARAMS* params,
    AK_SESSION** out_session);
AK_API VOID AK_CALL AkClose(
    AK_SESSION* session);
AK_API AK_STATUS AK_CALL AkQuerySessionState(
    AK_SESSION* session,
    AK_SESSION_STATE* out_state);
AK_API AK_STATUS AK_CALL AkQuerySessionStats(
    AK_SESSION* session,
    AK_SESSION_STATS* out_stats);
AK_API AK_STATUS AK_CALL AkPollEvent(
    AK_SESSION* session,
    AK_EVENT* out_event);
AK_API AK_STATUS AK_CALL AkCreateDisk(
    AK_SESSION* session,
    const AK_DISK_PARAMS* params,
    const AK_MEDIA_OPS* media_ops,
    void* media_ctx,
    AK_DISK** out_disk);
AK_API AK_STATUS AK_CALL AkRemoveDisk(
    AK_DISK* disk);
AK_API AK_STATUS AK_CALL AkQueryDiskState(
    AK_DISK* disk,
    AK_DISK_STATE* out_state);